--- a/index.htm
+++ b/index.htm
@@ -7,18 +7,26 @@
 
 <body>
 <p> <img src="main_title_head.gif"></p>
-<p><strong>-</strong><strong> x90</strong></p>
-<p>Hi~ It's Me <strong>a.k.a x90c</strong></p>
-<p>I create a paper for <strong>future research</strong> and you can come to me to <strong>enjoy hacking stuff</strong>s thanks for yours.</p>
+<p><strong>-</strong><strong> https://x90hack.github.io/captainsoftcenter/</strong></p>
+<p>------------------------------------------------------------------------------------------------------------------&nbsp;</p>
+<p>[0x01] Who's&nbsp; x90?<br>
+</p>
+I'm a&nbsp; sensational security researcher and 12 more years exprienced that easily security director.<br>
+I like many linux and bsd, solaris system internal. and kernel stuffs. I made many newer hacking<br>
+&nbsp;I worked with inetcop security company research team for my society job. no other reason for it.<br><br>
+This is my captain research homepage and backstage system. You can send your feedback to KyongJu Jung<br>
+[x90cx90c1[at]gmail.com]<br><br>
+<p>------------------------------------------------------------------------------------------------------------------</p>
+<b>[0x02] Publications</b><br><br>
+<b>Articles</b><br>
+&nbsp;&nbsp;<a href="http://www.phrack.com/issues/67/9.html">A Eulogy for Format Strings</a> (phrack.com 67/9)
 <p>------------------------------------------------------------------------------------------------------------------</p>
 <p><strong>[Topics]&nbsp;</strong></p>
 <p>&nbsp;1. linux kernel rootkit research</p>
 <p>&nbsp;2. vulnerability research (CVEs)</p>
 <p>&nbsp;3. Attack Method Research</p>
-<p><strong>&nbsp;[E-mail]</strong></p>
-<p><strong>x90cx90c1</strong>@gmail.com&nbsp;</p>
-<p><strong>[Archived]</strong></p>
-<p>- x90c hacking the MKD command Easy FTP&nbsp; Server for win32 (This Introduced in a KaliLinux Book)</p>
+<p><strong>[Mentions]</strong></p>
+<p>- x90c hacking the MKD command Easy FTP&nbsp; Server for win32 (This Introduced in <a href="https://books.google.co.kr/books?id=MVt1DwAAQBAJ&pg=PA282&lpg=PA282&dq=x90c+mkd&source=bl&ots=DPfFQPFRn0&sig=ACfU3U0cF6KJouFOT8UEoxzsRME9RYKiFA&hl=ko&sa=X&redir_esc=y#v=onepage&q=x90c%20mkd&f=false">a KaliLinux Book</a>)</p>
 	<p>&nbsp;</p>
 </body>
 </html>
