--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
   Hello came back my time! I'm a hacker, and in other words vulnerability researcher 
 I have exprienced hacking from 1998~now If do count, Its been about 20 more years
 Yeah. But I'm not good at hacking than other my 1337 dudes they online. :~/
+
+1999, I reported the world-around first fsb(format string bug) exploit code, It was a new technique remained to 90's and to now
+  (it mean wuftpd-2600.c, I used 'tf8' id nickname before 'x90c')
+
+2002. I joined big famous korean hacker commununity study group(team) OH(OverHead), Not research Code team.
+  I studied a script kiddie like style, I was not lame but Think again now, It's just script kiddie level hacker arise the team
+  Why?? I was a 1337 whom introduced fsb technique to the internet hacker social
+  I can have sayclub.com three bugs reported in 'OH 3th Magazine ('x90c's passion title'd)
+  ... ( Muhm ) ...
+ 
+  and etc. etc.
+
+2010~2013, I co-worked researcher for korean security company INETCOP(c) with hacker x82 boss!
+  I've learened from him about vulnerability research and other kind words. I apolozied to him
+  I'm his old fan in this korean hacker social. But Rebel sweden hacker's real dude Me!
+  I like rebel than x82. sorry... it's just my bad (no kind for you guy, healthy and thin bodyline If you want to become do it)
+
 </pre>
 
 <b>0x2. Archived CVE tracks</b>
