--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body id='1' name='hobby hacker'>
 
-<img src="bg.jpg" height='150' width='150'></img><b>0x0. Resercher x90c?</b>
+<img src="bg.jpg" height='150' width='150'></img><b>0x0. Researcher x90c?</b>
 <pre>
 -------------------------------------------------------------------------------------------------------------------------------
 
