--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ no CVE tracks:
 -------------------------------------------------------------------------------------------------------------------------------
 
   I like the discovery bugs in source code :-) or binaries. Many time mis point out advisories are released on the online FD
-  (Full Disclosure Mailing List). and I apologized to him fydor(nmap developer hacker). And He allowed to post my mail
+  (Full Disclosure Mailing List). and I apologized to him fyodor(nmap developer hacker). And He allowed to post my mail
   to the web again. Thanks to Fyodor!
 
   I like to dig attack technique research also. I have three time exprienced to make a new system hacking technique
