--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ no CVE tracks:
 
   And I don't hate any korean 1337 hackers. they are now famous in television show and news headline
   But For Me, I'm not that good. But Always*, I gave many efforts to learn hacking and bug hunting. thanks! 
-  Hacking Need, More smart and many time dinging! don't forget it! dudes
+  Hacking Need, More smart and many time diging! don't forget it! dudes
 
 </pre>
 
